Parser/EPDDLParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from EPDDLParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class EPDDLParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		EVENT=1, PRECONDITION=2, POSTCONDITIONS=3, STATE=4, INIT=5, GOAL=6, WHERE=7, 
		RELATIONS=8, DESIGNATED=9, PREDICATES=10, MODALITY=11, ACTION=12, PARAMETERS=13, 
		OBSERVABILITY_GROUPS=14, ACTION_TYPE_LIBRARIES=15, REQUIREMENTS=16, TYPES=17, 
		OBJECTS=18, STATIC=19, AGENTS=20, AGENT_GROUPS=21, VALUATION=22, STATE_NAME=23, 
		OBSERVABILITY_CONDITIONS=24, ACTION_TYPE=25, WORLDS=26, DEL=27, TYPING=28, 
		EQUALITY=29, CDOMAIN=30, EXISTENTIAL_FORMULAE=31, MULTI_AGENT=32, ONTIC_ACTIONS=33, 
		UNIVERSAL_FORMULAE=34, UNIVERSAL_POSTCONDITIONS=35, MODAL_PRECONDITIONS=36, 
		MODAL_POSTCONDITIONS=37, MODALITIES=38, ONTIC_CHANGE=39, COMMON_KNOWLEDGE=40, 
		DYNAMIC_COMMON_KNOWLEDGE=41, FINITARY_S5_THEORY=42, MAX_PRECONDITIONS_DEPTH=43, 
		MAX_POSTCONDITIONS_DEPTH=44, MAX_MODAL_DEPTH=45, FINITARY_THEORY=46, COLON=47, 
		IMPLY=48, OR=49, AND=50, NOT=51, EXISTS=52, FORALL=53, TRUE=54, FALSE=55, 
		ASSIGN=56, KW=57, IFF=58, WHEN=59, ALWAYS=60, IF=61, OTHERWISE=62, DEFINE=63, 
		DOMAIN=64, LIBRARY=65, PROBLEM=66, PREDICATE=67, PREDICATE_FORMULA=68, 
		FORMULA=69, POSTCONDITION=70, LITERAL=71, ALL=72, WORLD=73, AGENT=74, 
		TRIVIAL_DEF=75, NAME=76, AGENT_NAME=77, MODALITY_NAME=78, VARIABLE=79, 
		INT=80, WS=81, COMMENT=82, DASH=83, LPAREN=84, RPAREN=85, LBRACKET=86, 
		RBRACKET=87, LBRACE=88, RBRACE=89, LT=90, GT=91;
	public const int
		RULE_mainDef = 0, RULE_domainDef = 1, RULE_libraryDef = 2, RULE_problemDef = 3, 
		RULE_domainItemDef = 4, RULE_libraryItemDef = 5, RULE_problemItemDef = 6, 
		RULE_domainLibrariesNameDef = 7, RULE_problemDomainNameDef = 8, RULE_agentNamesDef = 9, 
		RULE_agentGroupsListDef = 10, RULE_agentGroupDef = 11, RULE_objectNamesDef = 12, 
		RULE_staticPredListDef = 13, RULE_requireDef = 14, RULE_typesDef = 15, 
		RULE_predicateListDef = 16, RULE_predicateDef = 17, RULE_actionDef = 18, 
		RULE_parametersDef = 19, RULE_modalityDef = 20, RULE_observabilityGroupsDef = 21, 
		RULE_eventDef = 22, RULE_eventPreDef = 23, RULE_eventPostDef = 24, RULE_postconditionBlock = 25, 
		RULE_postcondition = 26, RULE_simplePostcondition = 27, RULE_actionTypeDef = 28, 
		RULE_stateDef = 29, RULE_initDef = 30, RULE_goalDef = 31, RULE_actionConditionDef = 32, 
		RULE_actionTypeSignatureDef = 33, RULE_actionPreDef = 34, RULE_actionObsDef = 35, 
		RULE_typedIdentList = 36, RULE_typedVariableList = 37, RULE_type = 38, 
		RULE_reservedType = 39, RULE_formula = 40, RULE_conditionFormula = 41, 
		RULE_condition = 42, RULE_atomicCondition = 43, RULE_predicateFormula = 44, 
		RULE_atomicEqFormula = 45, RULE_term = 46, RULE_groundTerm = 47, RULE_modality = 48, 
		RULE_singleModality = 49, RULE_groupModality = 50, RULE_modalityLabel = 51, 
		RULE_modalityAgent = 52, RULE_modalityAgentGroup = 53, RULE_allAgents = 54, 
		RULE_predicateName = 55, RULE_domainName = 56, RULE_problemName = 57, 
		RULE_libraryName = 58, RULE_stateName = 59, RULE_worldName = 60, RULE_actionName = 61, 
		RULE_eventName = 62, RULE_agentName = 63, RULE_modalityName = 64, RULE_staticPredDef = 65, 
		RULE_genericName = 66, RULE_stateWorldsDef = 67, RULE_stateRelDef = 68, 
		RULE_stateRelations = 69, RULE_worldRelation = 70, RULE_worldNamePair = 71, 
		RULE_stateValDef = 72, RULE_stateValuation = 73, RULE_worldValuation = 74, 
		RULE_stateDesignDef = 75, RULE_agentGroup = 76, RULE_literal = 77, RULE_initialStateDescr = 78, 
		RULE_fTheoryFormula = 79, RULE_simpleFTheoryFormula = 80, RULE_actionTypeName = 81, 
		RULE_parameter = 82, RULE_expression = 83, RULE_formulaOrEmpty = 84, RULE_obsConditionDef = 85, 
		RULE_universalObsCond = 86, RULE_obsCondition = 87, RULE_trivialObsCond = 88, 
		RULE_ifObsCond = 89, RULE_otherwiseObsCond = 90, RULE_observingAgent = 91, 
		RULE_observingAgentGroup = 92, RULE_agentGroupName = 93, RULE_predicate = 94, 
		RULE_actionTypeGroupsDef = 95, RULE_actionTypeEventsDef = 96, RULE_eventSignature = 97, 
		RULE_actionTypeRelDef = 98, RULE_actionRelations = 99, RULE_eventRelation = 100, 
		RULE_eventNamePair = 101, RULE_actionTypeDesignDef = 102, RULE_typedAgentList = 103, 
		RULE_knowsWhether = 104, RULE_requirementKey = 105;
	public static readonly string[] ruleNames = {
		"mainDef", "domainDef", "libraryDef", "problemDef", "domainItemDef", "libraryItemDef", 
		"problemItemDef", "domainLibrariesNameDef", "problemDomainNameDef", "agentNamesDef", 
		"agentGroupsListDef", "agentGroupDef", "objectNamesDef", "staticPredListDef", 
		"requireDef", "typesDef", "predicateListDef", "predicateDef", "actionDef", 
		"parametersDef", "modalityDef", "observabilityGroupsDef", "eventDef", 
		"eventPreDef", "eventPostDef", "postconditionBlock", "postcondition", 
		"simplePostcondition", "actionTypeDef", "stateDef", "initDef", "goalDef", 
		"actionConditionDef", "actionTypeSignatureDef", "actionPreDef", "actionObsDef", 
		"typedIdentList", "typedVariableList", "type", "reservedType", "formula", 
		"conditionFormula", "condition", "atomicCondition", "predicateFormula", 
		"atomicEqFormula", "term", "groundTerm", "modality", "singleModality", 
		"groupModality", "modalityLabel", "modalityAgent", "modalityAgentGroup", 
		"allAgents", "predicateName", "domainName", "problemName", "libraryName", 
		"stateName", "worldName", "actionName", "eventName", "agentName", "modalityName", 
		"staticPredDef", "genericName", "stateWorldsDef", "stateRelDef", "stateRelations", 
		"worldRelation", "worldNamePair", "stateValDef", "stateValuation", "worldValuation", 
		"stateDesignDef", "agentGroup", "literal", "initialStateDescr", "fTheoryFormula", 
		"simpleFTheoryFormula", "actionTypeName", "parameter", "expression", "formulaOrEmpty", 
		"obsConditionDef", "universalObsCond", "obsCondition", "trivialObsCond", 
		"ifObsCond", "otherwiseObsCond", "observingAgent", "observingAgentGroup", 
		"agentGroupName", "predicate", "actionTypeGroupsDef", "actionTypeEventsDef", 
		"eventSignature", "actionTypeRelDef", "actionRelations", "eventRelation", 
		"eventNamePair", "actionTypeDesignDef", "typedAgentList", "knowsWhether", 
		"requirementKey"
	};

	private static readonly string[] _LiteralNames = {
		null, "':event'", "':precondition'", "':postconditions'", "':state'", 
		"':init'", "':goal'", "':where'", "':relations'", "':designated'", "':predicates'", 
		"':modality'", "':action'", "':parameters'", "':observability-groups'", 
		"':action-type-libraries'", "':requirements'", "':types'", "':objects'", 
		"':static'", "':agents'", "':agent-groups'", "':valuation'", "':state-name'", 
		"':observability-conditions'", "':action-type'", "':worlds'", "':del'", 
		"':typing'", "':equality'", "':domain'", "':existential-formulae'", "':multi-agent'", 
		"':ontic-actions'", "':universal-formulae'", "':universal-postconditions'", 
		"':modal-preconditions'", "':modal-postconditions'", "':modalities'", 
		"':ontic-change'", "':common-knowledge'", "':dynamic-common-knowledge'", 
		"':finitary-S5-theory'", "':maximum-preconditions-depth'", "':maximum-postconditions-depth'", 
		"':maximum-modal-depth'", "':ma-star-finitary-theory'", "':'", "'imply'", 
		"'or'", "'and'", "'not'", "'exists'", "'forall'", "'true'", "'false'", 
		"'<-'", "'kw'", "'iff'", "'when'", "'always'", "'if'", "'otherwise'", 
		"'define'", "'domain'", "'library'", "'problem'", "'predicate'", "'predicate-formula'", 
		"'formula'", "'postcondition'", "'literal'", "'All'", "'world'", "'agent'", 
		"'()'", null, null, null, null, null, null, null, "'-'", "'('", "')'", 
		"'['", "']'", "'{'", "'}'", "'<'", "'>'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "EVENT", "PRECONDITION", "POSTCONDITIONS", "STATE", "INIT", "GOAL", 
		"WHERE", "RELATIONS", "DESIGNATED", "PREDICATES", "MODALITY", "ACTION", 
		"PARAMETERS", "OBSERVABILITY_GROUPS", "ACTION_TYPE_LIBRARIES", "REQUIREMENTS", 
		"TYPES", "OBJECTS", "STATIC", "AGENTS", "AGENT_GROUPS", "VALUATION", "STATE_NAME", 
		"OBSERVABILITY_CONDITIONS", "ACTION_TYPE", "WORLDS", "DEL", "TYPING", 
		"EQUALITY", "CDOMAIN", "EXISTENTIAL_FORMULAE", "MULTI_AGENT", "ONTIC_ACTIONS", 
		"UNIVERSAL_FORMULAE", "UNIVERSAL_POSTCONDITIONS", "MODAL_PRECONDITIONS", 
		"MODAL_POSTCONDITIONS", "MODALITIES", "ONTIC_CHANGE", "COMMON_KNOWLEDGE", 
		"DYNAMIC_COMMON_KNOWLEDGE", "FINITARY_S5_THEORY", "MAX_PRECONDITIONS_DEPTH", 
		"MAX_POSTCONDITIONS_DEPTH", "MAX_MODAL_DEPTH", "FINITARY_THEORY", "COLON", 
		"IMPLY", "OR", "AND", "NOT", "EXISTS", "FORALL", "TRUE", "FALSE", "ASSIGN", 
		"KW", "IFF", "WHEN", "ALWAYS", "IF", "OTHERWISE", "DEFINE", "DOMAIN", 
		"LIBRARY", "PROBLEM", "PREDICATE", "PREDICATE_FORMULA", "FORMULA", "POSTCONDITION", 
		"LITERAL", "ALL", "WORLD", "AGENT", "TRIVIAL_DEF", "NAME", "AGENT_NAME", 
		"MODALITY_NAME", "VARIABLE", "INT", "WS", "COMMENT", "DASH", "LPAREN", 
		"RPAREN", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "LT", "GT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "EPDDLParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static EPDDLParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public EPDDLParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public EPDDLParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class MainDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DomainDefContext domainDef() {
			return GetRuleContext<DomainDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LibraryDefContext libraryDef() {
			return GetRuleContext<LibraryDefContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ProblemDefContext problemDef() {
			return GetRuleContext<ProblemDefContext>(0);
		}
		public MainDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mainDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEPDDLParserListener typedListener = listener as IEPDDLParserListener;
			if (typedListener != null) typedListener.EnterMainDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEPDDLParserListener typedListener = listener as IEPDDLParserListener;
			if (typedListener != null) typedListener.ExitMainDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IEPDDLParserVisitor<TResult> typedVisitor = visitor as IEPDDLParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMainDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainDefContext mainDef() {
		MainDefContext _localctx = new MainDefContext(Context, State);
		EnterRule(_localctx, 0, RULE_mainDef);
		try {
			State = 215;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 212;
				domainDef();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 213;
				libraryDef();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 214;
				problemDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DomainDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LPAREN() { return GetTokens(EPDDLParser.LPAREN); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN(int i) {
			return GetToken(EPDDLParser.LPAREN, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEFINE() { return GetToken(EPDDLParser.DEFINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOMAIN() { return GetToken(EPDDLParser.DOMAIN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DomainNameContext domainName() {
			return GetRuleContext<DomainNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] RPAREN() { return GetTokens(EPDDLParser.RPAREN); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN(int i) {
			return GetToken(EPDDLParser.RPAREN, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DomainItemDefContext[] domainItemDef() {
			return GetRuleContexts<DomainItemDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DomainItemDefContext domainItemDef(int i) {
			return GetRuleContext<DomainItemDefContext>(i);
		}
		public DomainDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_domainDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEPDDLParserListener typedListener = listener as IEPDDLParserListener;
			if (typedListener != null) typedListener.EnterDomainDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEPDDLParserListener typedListener = listener as IEPDDLParserListener;
			if (typedListener != null) typedListener.ExitDomainDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IEPDDLParserVisitor<TResult> typedVisitor = visitor as IEPDDLParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDomainDef(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DomainDefContext domainDef() {
		DomainDefContext _localctx = new DomainDefContext(Context, State);
		EnterRule(_localctx, 2, RULE_domainDef);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 217;
			Match(LPAREN);
			State = 218;
			Match(DEFINE);
			State = 219;
			Match(LPAREN);
			State = 220;
			Match(DOMAIN);
			State = 221;
			domainName();
			State = 222;
			Match(RPAREN);
			State = 226;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LPAREN) {
				{
				{
				State = 223;
				domainItemDef();
				}
				}
				State = 228;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 229;
			Match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LibraryDefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LPAREN() { return GetTokens(EPDDLParser.LPAREN); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPAREN(int i) {
			return GetToken(EPDDLParser.LPAREN, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DEFINE() { return GetToken(EPDDLParser.DEFINE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LIBRARY() { return GetToken(EPDDLParser.LIBRARY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LibraryNameContext libraryName() {
			return GetRuleContext<LibraryNameContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] RPAREN() { return GetTokens(EPDDLParser.RPAREN); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPAREN(int i) {
			return GetToken(EPDDLParser.RPAREN, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LibraryItemDefContext[] libraryItemDef() {
			return GetRuleContexts<LibraryItemDefContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LibraryItemDefContext libraryItemDef(int i) {
			return GetRuleContext<LibraryItemDefContext>(i);
		}
		public LibraryDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_libraryDef; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IEPDDLParserListener typedListener = listener as IEPDDLParserListener;
			if (typedListener != null) typedListener.EnterLibraryDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IEPDDLParserListener typedListener = listener as IEPDDLParserListener;
			if (typedListener != null) typedListener.ExitLibraryDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IEPDDLParserVisitor<TResult> typedVisitor = visitor as IEPDDLParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLibraryDef(this);
			else return visitor.VisitChildren(this);
		}
	}
